fixed error issues, pixel perfect each section base on errors found

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#"> <img src="./img/ZuriVOD.png" alt=""></a>
+            <a class="navbar-brand" href="#"> <img src="./img/Zuri VOD.png" alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                     <h1 class="card-title">&dollar;0.00</h1>
-                    <p class="card-text mt-2 mb-5">14 day free trial</p>
+                    <p class="card-text">14 day free trial</p>
                     <a href="#" class="btn">Start Free Trial</a>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                     <h1 class="card-title">&dollar;9.99</h1>
-                    <p class="card-text mt-2 mb-5">&dollar;0.33/Day</p>
+                    <p class="card-text">&dollar;0.33/Day</p>
                     <a href="#" class="btn">Start Watching</a>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
                     <h1 class="card-title">&dollar;99.99</h1>
-                    <p class="card-text mt-2 mb-5">&dollar;0.27/Day</p>
+                    <p class="card-text">&dollar;0.27/Day</p>
                     <a href="#" class="btn">Start Watching</a>
                 </div>
             </div>
@@ -150,55 +150,83 @@
             <h2 class="sect__lead text-center mb-4">
                 Frequently Asked Questions (FAQs)
             </h2>
-            <button class="accordion details-head my-2">What is a frequently asked question?</button>
-            <div class="panel">
-                <p class="panel-txt mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eleifend
-                    quam eu nisl ornare, at consectetur mi semper. Phasellus feugiat mi turpis. Donec luctus iaculis
-                    dui, vitae bibendum velit vestibulum at. Proin porta ferme ntum justo.
-                    Quisque accumsan tortor nec nibh vestibulum elementum. Mauris a ullamcorper lectus, sit amet
-                    pellentesque mauris. Ut quis vulputate augue, et ultricies enim.</p>
+            <div class="faq-accordion">
+                <div class="accordionButton mb-3">
+                    <button class="accordion details-head">What is a frequently asked question?</button>
+                    <div class="panel">
+                        <p class="panel-txt mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                            eleifend
+                            quam eu nisl ornare, at consectetur mi semper. Phasellus feugiat mi turpis. Donec luctus
+                            iaculis
+                            dui, vitae bibendum velit vestibulum at. Proin porta ferme ntum justo.
+                            Quisque accumsan tortor nec nibh vestibulum elementum. Mauris a ullamcorper lectus, sit amet
+                            pellentesque mauris. Ut quis vulputate augue, et ultricies enim.</p>
+                    </div>
+                </div>
+                <div class="accordionButton mb-3">
+                    <button class="accordion details-head">What is a frequently asked question?</button>
+                    <div class="panel">
+                        <p class="panel-txt mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                            eleifend
+                            quam eu nisl ornare, at consectetur mi semper. Phasellus feugiat mi turpis. Donec luctus
+                            iaculis
+                            dui, vitae bibendum velit vestibulum at. Proin porta ferme ntum justo. Quisque accumsan
+                            tortor
+                            nec nibh vestibulum elementum. Mauris a ullamcorper lectus, sit amet pellentesque mauris. Ut
+                            quis vulputate augue, et ultricies enim.</p>
+                    </div>
+                </div>
+                <div class="accordionButton mb-3">
+                    <button class="accordion details-head">What is a frequently asked question?</button>
+                    <div class="panel">
+                        <p class="panel-txt mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                            eleifend
+                            quam eu nisl ornare, at consectetur mi semper. Phasellus feugiat mi turpis. Donec luctus
+                            iaculis
+                            dui, vitae bibendum velit vestibulum at. Proin porta ferme ntum justo. Quisque accumsan
+                            tortor
+                            nec nibh vestibulum elementum. Mauris a ullamcorper lectus, sit amet pellentesque mauris. Ut
+                            quis vulputate augue, et ultricies enim.</p>
+                    </div>
+                </div>
+                <div class="accordionButton mb-3">
+                    <button class="accordion details-head">What is a frequently asked question?</button>
+                    <div class="panel">
+                        <p class="panel-txt mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                            eleifend
+                            quam eu nisl ornare, at consectetur mi semper. Phasellus feugiat mi turpis. Donec luctus
+                            iaculis
+                            dui, vitae bibendum velit vestibulum at. Proin porta ferme ntum justo. Quisque accumsan
+                            tortor
+                            nec nibh vestibulum elementum. Mauris a ullamcorper lectus, sit amet pellentesque mauris. Ut
+                            quis vulputate augue, et ultricies enim.</p>
+                    </div>
+                </div>
             </div>
-            <button class="accordion details-head my-2">What is a frequently asked question?</button>
-            <div class="panel">
-                <p class="panel-txt mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eleifend
-                    quam eu nisl ornare, at consectetur mi semper. Phasellus feugiat mi turpis. Donec luctus iaculis
-                    dui, vitae bibendum velit vestibulum at. Proin porta ferme ntum justo.
-                    Quisque accumsan tortor nec nibh vestibulum elementum. Mauris a ullamcorper lectus, sit amet
-                    pellentesque mauris. Ut quis vulputate augue, et ultricies enim.</p>
-            </div><button class="accordion details-head my-2">What is a frequently asked question?</button>
-            <div class="panel">
-                <p class="panel-txt mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eleifend
-                    quam eu nisl ornare, at consectetur mi semper. Phasellus feugiat mi turpis. Donec luctus iaculis
-                    dui, vitae bibendum velit vestibulum at. Proin porta ferme ntum justo.
-                    Quisque accumsan tortor nec nibh vestibulum elementum. Mauris a ullamcorper lectus, sit amet
-                    pellentesque mauris. Ut quis vulputate augue, et ultricies enim.</p>
-            </div><button class="accordion details-head my-2">What is a frequently asked question?</button>
-            <div class="panel">
-                <p class="panel-txt mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eleifend
-                    quam eu nisl ornare, at consectetur mi semper. Phasellus feugiat mi turpis. Donec luctus iaculis
-                    dui, vitae bibendum velit vestibulum at. Proin porta ferme ntum justo.
-                    Quisque accumsan tortor nec nibh vestibulum elementum. Mauris a ullamcorper lectus, sit amet
-                    pellentesque mauris. Ut quis vulputate augue, et ultricies enim.</p>
-            </div>
+
         </div>
     </section>
 
     <!-- contact section  -->
     <section id="contact">
         <div class="container text-center contact d-flex flex-column justify-content-center align-items-center">
-            <h2 class=" sect__lead my-2">Still have a question? Feel free to reach out to us</h2>
-            <a href="#" class="btn">Contact Us</a>
+            <h2 class=" sect__lead my-3">Still have a question? Feel free to reach out to us</h2>
+            <a href="#" class="btn mt-3">Contact Us</a>
         </div>
     </section>
+
+    <!-- footer section  -->
     <footer>
         <div class="container my-5">
-            <div class="d-flex justify-content-between  align-items-center foot">
-                <img src="./img/ZuriVOD.png" alt="Zuri-logo" class="img-fluid">
-                <a href="#" class="foot-links ft-links">Terms and Conditions</a>
-                <a href="#" class="foot-links ft-links">Privacy Policy</a>
-                <a href="#" class="foot-links ft-links">Send Us Feedback</a>
-                <a href="#" class="foot-links ft-links">Help</a>
-                <p class="foot-links mb-0">&copy;2020, Zuri</p>
+            <div class="d-flex justify-content-between  align-items-center footSection">
+                <img src="./img/Zuri VOD.png" alt="Zuri-logo" class="img-fluid">
+                <div class="d-flex linksGroup">
+                    <a href="#" class="foot-links ft-links">Terms and Conditions</a>
+                    <a href="#" class="foot-links ft-links">Privacy Policy</a>
+                    <a href="#" class="foot-links ft-links">Send Us Feedback</a>
+                    <a href="#" class="foot-links ft-links">Help</a>
+                </div>
+                <p class="copyRight mb-0">&copy;2020, Zuri</p>
             </div>
 
     </footer>
