--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#"> <img src="./img/Zuri VOD.png" alt="Logo"></a>
+            <a class="navbar-brand" href="#"> <p class="logoName"><i>Zuri</i> VOD</p>
+                <!---<img src="./img/Zuri VOD.png" alt="Logo">--->
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -219,7 +221,7 @@
     <footer>
         <div class="container my-5">
             <div class="d-flex justify-content-between  align-items-center footSection">
-                <img src="./img/Zuri VOD.png" alt="Zuri-logo" class="img-fluid">
+                <p class="logoName"><i>Zuri</i> VOD</p>
                 <div class="d-flex linksGroup">
                     <a href="#" class="foot-links ft-links">Terms and Conditions</a>
                     <a href="#" class="foot-links ft-links">Privacy Policy</a>
