Fixed gradients issues, fixed issue with header section

--- a/index.html
+++ b/index.html
@@ -19,54 +19,56 @@
 
 <body>
     <!-------------- Section 1 start -------------->
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="#"> <p class="logoName"><i>Zuri</i> VOD</p>
-                <!---<img src="./img/Zuri VOD.png" alt="Logo">--->
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav  ml-auto text-center ">
-                    <li class="nav-item mr-4">
-                        <a class="nav-link" href="#blog">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link button-signup" href="#contact">Sign Up </a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Navbar -->
-
     <!-- Header  -->
-    <header class="header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-7 col-12 header__text">
-                    <h1>Watch Movies Anytime,
-                        Anywhere.
-                    </h1>
-                    <p>Join Zuri VOD to watch the latest movies, anytime,
-                        anywhere.</p>
-                    <form>
-                        <div class="form-row header_form ">
-                            <div class="col-12 col-xl-7">
-                                <input type="text" class="form-control form-control-md " placeholder="Email Address"
-                                    id="email" name="email" aria-describedby="emailHelp" />
+    <header id="header" class="header ">
+
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-sm navbar-dark fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <p class="logoName"><i>Zuri</i> VOD</p>
+                    <!---<img src="./img/Zuri VOD.png" alt="Logo">--->
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav  ml-auto text-center ">
+                        <li class="nav-item mr-4">
+                            <a class="nav-link" href="#blog">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link button-signup" href="#contact">Sign Up </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Hero area -->
+        <div class="heroArea">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-7 col-12 header__text">
+                        <h1>Watch Movies Anytime,
+                            Anywhere.
+                        </h1>
+                        <p>Join Zuri VOD to watch the latest movies, anytime,
+                            anywhere.</p>
+                        <form>
+                            <div class="form-row header_form ">
+                                <div class="col-12 col-xl-7">
+                                    <input type="text" class="form-control form-control-md " placeholder="Email Address"
+                                        id="email" name="email" aria-describedby="emailHelp" />
+                                </div>
+                                <div class="col-12 col-xl-3   ">
+                                    <button class="btn btn-md header__button  mt-2 mt-xl-0 btn-block " type="submit"
+                                        name="submit">
+                                        Start Watching</button>
+                                </div>
                             </div>
-                            <div class="col-12 col-xl-3   ">
-                                <button class="btn btn-md header__button  mt-2 mt-xl-0 btn-block " type="submit"
-                                    name="submit">
-                                    Start Watching</button>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
